--- a/package.json
+++ b/package.json
@@ -11,22 +11,30 @@
     "initDB": "ts-node script/initDB.ts"
   },
   "dependencies": {
-    "@polkadot/api": "^1.5.1",
-    "@types/redis": "^2.8.16",
+    "@polkadot/api": "^1.13.1",
+    "apollo-server-koa": "^2.13.1",
     "dotenv": "^8.2.0",
     "edgeware-node-types": "^1.2.0",
+    "express": "^4.17.1",
+    "graphql": "^15.0.0",
+    "graphql-adapter": "^0.9.0",
     "koa": "^2.11.0",
     "koa-body": "^4.1.1",
+    "koa-graphql": "^0.8.0",
     "koa-router": "^8.0.8",
+    "lodash": "^4.17.15",
     "log4js": "^6.1.2",
     "mysql2": "^2.1.0",
     "redis": "^3.0.2",
-    "sequelize": "^5.21.5"
+    "sequelize": "^5.21.5",
+    "ws": "^7.3.0"
   },
   "devDependencies": {
     "@types/koa": "^2.11.2",
+    "@types/koa-graphql": "^0.8.3",
     "@types/koa-router": "^7.4.0",
     "@types/node": "^13.9.0",
+    "@types/redis": "^2.8.16",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.8.3"
   }
